--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="img/meow.png" alt="cat pic" class=".header-img" />
-      <h1 class=".header-title">Chairman Meow's Kitchen</h1>
+      <img src="img/meow.png" alt="cat pic" class="header-img" />
+      <h1 class="header-title">Chairman Meow's Kitchen</h1>
     </div>
     <div class="row">
       <div class="item">
